Improve gijiroku search performance
